<resources>
    <string name="app_name">MusicPlayer</string>

    <string name="video_view">Video View</string>
    <string name="audio_recording">Audio Recording</string>
    <string name="video_recording">Video Recording</string>
    <string name="camera_n_gallery">Camera \&amp; Gallery</string>

    <string name="action_settings">Settings</string>
    <string name="play">Play</string>
    <string name="start">Start</string>
    <string name="stoprecording">Stop Recording</string>
</resources>
